extends Node
export(int) var levelX = 14
export(int) var levelY = 14
var curLevel = 0
var curKeys = 0
var neededKeys = 0
var gameStarted = false
signal start_level
signal end_game
signal character_died
signal update_GFX
signal update_UI
var title
var map

func _input(event):
	if(event.is_action_pressed("ui_accept") && !gameStarted):
		StartGame()
		pass

func _ready():
	title = $Title
	map = []
	for x in range(levelX + 1):
		map.append([])
		for y in range(levelY + 1):
			map[x].append(0)
			pass
		pass
	connect("end_game", $Player, "")
	connect("update_UI", $UI, "UpdateUI")
	connect("start_level", $Player, "LevelStart")
	connect("update_GFX", $FloorGFX, "FloorGFXUpdate")
	pass

func StartGame():
	InitializeLevel(1, false)
	remove_child(title)
	gameStarted = true
	pass


func CheckTile(var x, var y):
	if (map[x][y] == 3):
		curKeys = curKeys + 1
		map[x][y] = 1
		$KeySound.play()
		emit_signal("update_GFX", map)
		emit_signal("update_UI", neededKeys, curKeys, curLevel)
		pass
	elif(map[x][y] == 4 && curKeys >= neededKeys):
		$TeleportSound.play()
		InitializeLevel(curLevel + 1, false)
		pass
	elif(map[x][y] == 0):
		emit_signal("character_died")
		InitializeLevel(0, true)
		pass
	pass

func UpdateMap(var x, var y):
	if (map[x][y] == 1):
		map[x][y] = 0
		$Rumble.play()
		pass
	elif (map[x][y] == 2):
		map[x][y] = 1
		$Rumble.play()
		pass
	elif (map[x][y] == 5):
		map[x][y] = 2
		$Rumble.play()
		pass
	emit_signal("update_GFX", map)
	pass

func InitializeLevel (var level, var useCurLevel):
	if (useCurLevel): level = curLevel
	else: curLevel = level
	curKeys = 0
	map = []
	for x in range(levelX + 1):
		map.append([])
		for y in range(levelY + 1):
			map[x].append(0)
	if (level == 1):
#		      y:  0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15
		map[14] =[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[13] =[0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0 ]
		map[12] =[0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[11] =[0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[10] =[0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[9] = [0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[8] = [0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[7] = [0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[6] = [0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[5] = [0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[4] = [0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[3] = [0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[2] = [0, 0, 0, 0, 0, 0, 0, 4, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[1] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[0] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		neededKeys = 0
		emit_signal("start_level", 13, 11, map)
		pass
	elif (level == 2):
#             y:  0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15
		map[14] =[0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[13] =[0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[12] =[0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[11] =[0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[10] =[0, 0, 4, 1, 1, 1, 2, 1, 1, 1, 1, 1, 0, 0, 0, 0 ]
		map[9] = [0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0 ]
		map[8] = [0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0 ]
		map[7] = [0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0 ]
		map[6] = [0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0 ]
		map[5] = [0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0 ]
		map[4] = [0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0 ]
		map[3] = [0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 3, 0, 0, 0, 0 ]
		map[2] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[1] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[0] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		neededKeys = 1
		emit_signal("start_level", 14, 6, map)
		pass
	elif (level == 3):
#             y:  0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15
		map[14] =[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[13] =[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[12] =[0, 0, 3, 1, 1, 1, 0, 0, 0, 3, 1, 1, 1, 0, 0, 0 ]
		map[11] =[0, 0, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0 ]
		map[10] =[0, 0, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0 ]
		map[9] = [0, 0, 1, 1, 1, 2, 1, 1, 1, 2, 1, 4, 2, 1, 1, 0 ]
		map[8] = [0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0 ]
		map[7] = [0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0 ]
		map[6] = [0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0 ]
		map[5] = [0, 0, 0, 0, 0, 3, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0 ]
		map[4] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[3] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[2] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[1] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[0] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		neededKeys = 3
		emit_signal("start_level", 9, 14, map)
		pass
	elif (level == 4):
#             y:  0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15
		map[14] =[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[13] =[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[12] =[0, 0, 0, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[11] =[0, 0, 0, 0, 2, 0, 0, 0, 0, 1, 1, 3, 0, 0, 0, 0 ]
		map[10] =[0, 0, 0, 0, 2, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0 ]
		map[9] = [0, 0, 0, 0, 2, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0 ]
		map[8] = [0, 1, 1, 1, 2, 1, 1, 2, 1, 1, 1, 1, 1, 4, 0, 0 ]
		map[7] = [0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[6] = [0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[5] = [0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[4] = [0, 0, 0, 0, 0, 0, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[3] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[2] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[1] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[0] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		neededKeys = 3
		emit_signal("start_level", 8, 1, map)
		pass
	elif (level == 5):
#             y:  0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15
		map[14] =[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[13] =[0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[12] =[0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[11] =[0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[10] =[0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0 ]
		map[9] = [0, 3, 2, 2, 2, 2, 1, 1, 1, 1, 2, 2, 2, 3, 0, 0 ]
		map[8] = [0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[7] = [0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[6] = [0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[5] = [0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[4] = [0, 0, 4, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[3] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[2] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[1] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[0] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		neededKeys = 2
		emit_signal("start_level", 13, 2, map)
		pass
	elif (level == 6):
#             y:  0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15
		map[14] =[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[13] =[0, 0, 0, 0, 0, 0, 1, 1, 2, 2, 2, 2, 2, 2, 1, 1 ]
		map[12] =[0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 2, 0, 0 ]
		map[11] =[0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 2, 0, 0 ]
		map[10] =[0, 0, 0, 0, 0, 0, 3, 0, 1, 0, 0, 0, 1, 2, 0, 0 ]
		map[9] = [0, 0, 0, 0, 0, 0, 1, 1, 2, 2, 3, 0, 1, 2, 0, 0 ]
		map[8] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 2, 0, 0 ]
		map[7] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3, 4, 0, 0 ]
		map[6] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[5] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[4] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[3] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[2] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[1] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[0] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		neededKeys = 3
		emit_signal("start_level", 13, 14, map)
		pass
	elif (level == 7):
#             y:  0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15
		map[14] =[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[13] =[0, 1, 0, 0, 1, 1, 2, 2, 3, 0, 0, 0, 0, 0, 0, 0 ]
		map[12] =[0, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[11] =[0, 2, 1, 1, 1, 0, 1, 1, 3, 0, 0, 0, 0, 0, 0, 0 ]
		map[10] =[0, 2, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0 ]
		map[9] = [0, 2, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[8] = [0, 2, 2, 0, 3, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[7] = [0, 2, 2, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[6] = [0, 3, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[5] = [0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[4] = [0, 0, 4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[3] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[2] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[1] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[0] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		neededKeys = 4
		emit_signal("start_level", 13, 1, map)
		pass
	elif (level == 8):
#             y:  0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15
		map[14] =[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[13] =[0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[12] =[0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[11] =[0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[10] =[0, 0, 1, 1, 2, 2, 2, 2, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[9] = [0, 0, 1, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[8] = [0, 0, 1, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[7] = [0, 0, 4, 0, 0, 2, 2, 5, 2, 2, 0, 0, 0, 0, 0, 0 ]
		map[6] = [0, 0, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0 ]
		map[5] = [0, 0, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0, 0, 0, 0 ]
		map[4] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[3] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[2] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[1] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[0] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		neededKeys = 2
		emit_signal("start_level", 13, 4, map)
		pass
	elif (level == 9):
#             y:  0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15
		map[14] =[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[13] =[0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0 ]
		map[12] =[0, 0, 0, 0, 0, 0, 0, 0, 4, 0, 0, 0, 0, 0, 0, 0 ]
		map[11] =[0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0 ]
		map[10] =[0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0 ]
		map[9] = [0, 0, 0, 1, 1, 1, 1, 0, 2, 0, 0, 0, 0, 0, 0, 0 ]
		map[8] = [0, 3, 1, 1, 1, 1, 2, 1, 5, 2, 2, 1, 1, 0, 0, 0 ]
		map[7] = [0, 1, 1, 1, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 0 ]
		map[6] = [0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 1, 1, 3, 0, 0, 0 ]
		map[5] = [0, 0, 0, 0, 0, 0, 1, 3, 1, 0, 0, 0, 0, 0, 0, 0 ]
		map[4] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[3] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[2] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[1] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[0] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		neededKeys = 2
		emit_signal("start_level", 13, 8, map)
		pass
	elif (level == 10):
#             y:  0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15
		map[14] =[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[13] =[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[12] =[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[11] =[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[10] =[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[9] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[8] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[7] = [0, 0, 0, 0, 0, 0, 1, 1, 3, 0, 0, 0, 0, 0, 0, 0 ]
		map[6] = [0, 0, 0, 0, 0, 0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0 ]
		map[5] = [0, 0, 0, 0, 3, 2, 2, 1, 0, 1, 0, 3, 1, 1, 0, 0 ]
		map[4] = [0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 2, 2, 1, 1, 0, 0 ]
		map[3] = [0, 0, 0, 0, 4, 1, 1, 1, 1, 1, 1, 0, 2, 1, 0, 0 ]
		map[2] = [0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 2, 0, 0, 0 ]
		map[1] = [0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 3, 0, 0, 0 ]
		map[0] = [0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0 ]
		neededKeys = 3
		emit_signal("start_level", 0, 7, map)
		pass
	elif (level == 11):
#             y:  0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15
		map[14] =[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[13] =[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[12] =[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[11] =[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[10] =[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[9] = [0, 0, 0, 0, 0, 3, 1, 1, 1, 1, 3, 0, 0, 0, 0, 0 ]
		map[8] = [0, 0, 0, 0, 0, 1, 1, 1, 1, 3, 1, 1, 1, 1, 0, 0 ]
		map[7] = [0, 0, 0, 0, 0, 0, 1, 3, 1, 1, 1, 0, 0, 0, 0, 0 ]
		map[6] = [0, 0, 0, 0, 4, 1, 1, 1, 1, 0, 1, 0, 0, 0, 0, 0 ]
		map[5] = [0, 0, 0, 0, 0, 0, 3, 1, 1, 1, 3, 0, 0, 0, 0, 0 ]
		map[4] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[3] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[2] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[1] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[0] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		neededKeys = 6
		emit_signal("start_level", 8, 13, map)
		pass
	elif (level == 12):
#             y:  0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15
		map[14] =[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[13] =[0, 0, 0, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[12] =[0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[11] =[0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
		map[10] =[0, 3, 2, 2, 5, 1, 4, 1, 1, 1, 1, 1, 3, 0, 0, 0 ]
		map[9] = [0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0 ]
		map[8] = [0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 3, 0, 1, 0, 0, 0 ]
		map[7] = [0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 2, 0, 1, 0, 0, 0 ]
		map[6] = [0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 2, 0, 1, 0, 0, 0 ]
		map[5] = [0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 2, 0, 1, 0, 0, 0 ]
		map[4] = [0, 0, 3, 1, 1, 3, 1, 1, 1, 1, 2, 1, 1, 0, 0, 0 ]
		map[3] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0 ]
		map[2] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 2, 0, 0, 0, 0, 0 ]
		map[1] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0 ]
		map[0] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3, 0, 0, 0, 0, 0 ]
		neededKeys = 7
		emit_signal("start_level", 10, 5, map)
		emit_signal("update_GFX", map)
		pass
	else:
		gameStarted = false
		emit_signal("end_game")
		map = []
		for x in range(levelX + 1):
			map.append([])
			for y in range(levelY + 1):
				map[x].append(0)
				pass
			pass
		curKeys = 0
		curLevel = 0
		neededKeys = 0
		add_child(title)
		pass
	emit_signal("update_GFX", map)
	emit_signal("update_UI", neededKeys, curKeys, curLevel)
	pass
#		Level Template
#	elif (level == 1):
##             y:  0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15
#		map[14] =[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
#		map[13] =[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
#		map[12] =[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
#		map[11] =[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
#		map[10] =[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
#		map[9] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
#		map[8] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
#		map[7] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
#		map[6] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
#		map[5] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
#		map[4] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
#		map[3] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
#		map[2] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
#		map[1] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
#		map[0] = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
#		neededKeys = 2
#		emit_signal("start_level", 13, 14, map)
#		pass
